test/bad/type_declaration_09.mpp
data foo = #Quux of * int | #Bar;
